--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
-title: Strata by HTML5 UP
+title: Justin Ma
 description: >
-  **I am Strata**, a super simple
-  responsive site template freebie
-  crafted by [HTML5 UP](http://html5up.net).
+After working mainly in front end design I've made the switch into a more
+technical role that is now finding the balance between Design and Big Data in order to bringing the conceptual down to reality.
 copyright: Untitled
 sass:
   sass_dir: assets/sass
@@ -10,7 +9,7 @@ url: http://localhost:4000
 disqus_shortname: stratajekylldemo
 facebook_username:
 twitter_username: "#"
-linkedin_username: "#"
+linkedin_username: "https://www.linkedin.com/in/justinmadata/"
 instagram_username:
 pinterest_username:
 flickr_username:
