--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: http://localhost:4000
 disqus_shortname: stratajekylldemo
 facebook_username:
 twitter_username: "#"
-linkedin_username: "justinmadata"
+linkedin_username: "#justinmadata"
 instagram_username:
 pinterest_username:
 flickr_username:
