--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,4 +1,4 @@
-- title: Halve Jekyll Theme
+- title: Yelp NLP Project
   url: http://taylantatli.me/Halve
   image: http://taylantatli.me/Halve/images/Yelp.jpg
-  completed: false
+  completed: true
