--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title: Justin Ma
-description: Python | Data Science | Data Analyst | Tableau | Scala | SQL | Machine Learning
+description: Python |C# | Data Analyst | Tableau | Unity | SQL | Machine Learning | Blender | Zbrush
 url: https://justinm7.github.io/
 logo: halve.png                                       # Site logo
 locale: en_US
@@ -37,7 +37,7 @@ github:             justinm7
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:          justinmadata
 #xing:              username
-#instagram:          username
+instagram:          dibbs777
 #lastfm:            username
 #tumblr:            username
 #pinterest:         username
