--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -8,5 +8,9 @@
   completed: true
 - title: AR Object Tracking
   url: https://drive.google.com/file/d/1BoM3uvyYxWr5hYmWZK4YGUDTQhweR5ho/view?usp=sharing
-  image: /images/AR proj.PNG
+  image: /images/AR proj.png
   completed: true
+  - title: Agriculture and XR development
+    url: https://dibbs777.medium.com/hello-again-b938e6bf4067
+    image: /images/xr.png
+    completed: false
