--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -13,4 +13,4 @@
   - title: Agriculture and XR development
     url: https://dibbs777.medium.com/hello-again-b938e6bf4067
     image: /images/xr.png
-    completed: false
+    completed: true
